--- a/src/components/PokemonList/comp_pokemonlist.scss
+++ b/src/components/PokemonList/comp_pokemonlist.scss
@@ -5,7 +5,7 @@
     .pokemon-name {
         font-weight: bold;
         font-size: 12px;
-        color: white;
+        color: #48D0B0;
         text-transform: capitalize;
     }
     .pokomon-skill-container {
@@ -16,12 +16,11 @@
             .skills-container {
                 background-color: rgba(255,255,255,0.2);
                 border-radius: 20px;
-                padding: 5px;
-                margin-bottom: 10px;
+                padding: 5px 5px 5px 0;
                 .skills {
                     margin: 0;
                     font-size: 10px;
-                    color: white;
+                    color: black;
                 }
             }
         }
