--- a/src/views/PokemonDetail/pokemondetail.scss
+++ b/src/views/PokemonDetail/pokemondetail.scss
@@ -2,10 +2,54 @@
 
 .pokemon-detail-container {
     min-height: 100vh;
+    .input-nickname-container {
+        background-color: white;
+        z-index: 1;
+        text-align: center;
+        padding: 20px;
+        position: absolute;
+        body {
+            opacity: 0;
+        }
+        .title-container {
+            margin-bottom: 20px;
+            .title {
+                font-size: 18px;
+                font-weight: bold;
+            }
+        }
+        .form-container {
+            .label-container {
+                .label {
+                    font-weight: bold;
+                }
+            }
+            .input-nickname {
+                padding: 10px 20px;
+                width: 100%;
+                border-radius: 50px;
+                outline: none;
+                border: 1px solid rgba(0,0,0,0.3);
+                margin-bottom: 30px;
+            }
+        }
+        .button-save-container {
+            .button-save {
+                background-color: #48D0B0;
+                padding: 5px 30px;
+                border: none;
+                outline: none;
+                color: white;
+                font-weight: bold;
+                border-radius: 50px;
+            }
+        }
+    }
     .pokemon-detail-content {
         padding: 20px;
     }
     .pokemon-card-detail {
+        // display: none;
         height: 50vh;
         width: 100%;
         border-top-left-radius: 30px;
@@ -23,6 +67,7 @@
             font-weight: bold;
             padding: 0 10px 20px 10px;
             color: black;
+            outline: none;
             &.active {
                 border-bottom: 1px solid aqua;
             }
@@ -47,5 +92,25 @@
                 }
             }
         }
+    }
+    .button-container {
+        position: absolute;
+        bottom: 0;
+        padding-bottom: inherit;
+        margin: auto;
+        text-align: center;
+        left: 0;
+        right: 0;
+        .catch-pokemon {
+            border: none;
+            background-color: #48D0B0;
+            box-shadow: 0px 0px 10px 1px rgba(0,0,0,0.3);
+            color: white;
+            border-radius: 50px;
+            width: 100px;
+            height: 100px;
+            font-weight: bold;
+            outline: none;
+        }   
     }
 }
