remove and showing owned pokemon success

--- a/src/components/MyPokemonCard/comp_mypokemoncard.scss
+++ b/src/components/MyPokemonCard/comp_mypokemoncard.scss
@@ -3,6 +3,7 @@
     border-radius: 10px;
     position: relative;
     box-sizing: border-box;
+    margin-bottom: 20px;
     .text-container {
         margin: auto;
     }
