--- a/src/views/PokemonDetail/pokemondetail.scss
+++ b/src/views/PokemonDetail/pokemondetail.scss
@@ -2,46 +2,69 @@
 
 .pokemon-detail-container {
     min-height: 100vh;
-    .input-nickname-container {
-        background-color: white;
-        z-index: 1;
-        text-align: center;
-        padding: 20px;
+    .container {
+        background-color: rgba(0,0,0,0.3);
+        width: 100%;
+        min-height: 100vh;
         position: absolute;
-        body {
-            opacity: 0;
+        right: 0;
+        left: 0;
+        top: 0;
+        bottom: 0;
+        margin: auto;
+        display: none;
+        &.active {
+            display: flex;
         }
-        .title-container {
-            margin-bottom: 20px;
-            .title {
-                font-size: 18px;
-                font-weight: bold;
+        .input-nickname-container {
+            background-color: white;
+            z-index: 1;
+            text-align: center;
+            padding: 20px;
+            margin: auto;
+            border-radius: 10px;
+            box-shadow: 0px 0px 6px 1px rgba(0,0,0,0.4);
+            body {
+                opacity: 0;
             }
-        }
-        .form-container {
-            .label-container {
-                .label {
+            .title-container {
+                margin-bottom: 20px;
+                .title {
+                    font-size: 18px;
                     font-weight: bold;
                 }
             }
-            .input-nickname {
-                padding: 10px 20px;
-                width: 100%;
-                border-radius: 50px;
-                outline: none;
-                border: 1px solid rgba(0,0,0,0.3);
-                margin-bottom: 30px;
+            .form-container {
+                .label-container {
+                    .label {
+                        font-weight: bold;
+                    }
+                }
+                .input-nickname {
+                    padding: 10px 20px;
+                    width: 100%;
+                    border-radius: 50px;
+                    outline: none;
+                    border: 1px solid rgba(0,0,0,0.3);
+                    margin-bottom: 30px;
+                }
             }
-        }
-        .button-save-container {
-            .button-save {
-                background-color: #48D0B0;
-                padding: 5px 30px;
-                border: none;
-                outline: none;
-                color: white;
-                font-weight: bold;
-                border-radius: 50px;
+            .button-save-container {
+                .button-save {
+                    background-color: #48D0B0;
+                    padding: 5px 30px;
+                    border: none;
+                    outline: none;
+                    color: white;
+                    font-weight: bold;
+                    border-radius: 50px;
+                    margin: 0 5px;
+                    &.outline {
+                        background-color: white;
+                        border: 1px solid #48D0B0;
+                        color: #48D0B0;
+                    }
+                }
             }
         }
     }
