--- a/src/components/PokemonList/comp_pokemonlist.scss
+++ b/src/components/PokemonList/comp_pokemonlist.scss
@@ -25,8 +25,10 @@
             }
         }
         .pokemon-image-container {
+            width: 50px;
+            height: 50px;
             .pokemon-image {
-                width: 60px;
+                width: 100%;
             }
         }
     }
