--- a/src/views/PokemonDetail/pokemondetail.scss
+++ b/src/views/PokemonDetail/pokemondetail.scss
@@ -137,3 +137,30 @@
         }   
     }
 }
+
+.toast-container {
+    position: absolute;
+    bottom: 0;
+    padding: inherit;
+    right: 0;
+    left: 0;
+    bottom: 40px;
+    text-align: center;
+    margin: auto;
+    transition: .2s ease-in;
+    display: none;
+    &.active {
+        display: block;
+    }
+    .text-container {
+        background-color: gray;
+        padding: 10px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px 2px rgba(0,0,0,0.2);
+        .toast-text {
+            color: white;
+            margin: 0;
+            font-size: 10px;
+        }
+    }
+}
