--- a/src/views/PokemonList/pokemonlist.scss
+++ b/src/views/PokemonList/pokemonlist.scss
@@ -2,7 +2,7 @@
 
 .pokemon-list-container {
     padding: 20px;
-    
+    background-color: #48D0B0;
     .navigation-container {
       display: flex;
       justify-content: space-between;
@@ -12,6 +12,6 @@
       }
     }
     .title-container {
-      margin: 30px 0 50px 0;
+      margin: 30px 0 0 0;
     }
   }
