added new style

--- a/src/views/PokemonList/pokemonlist.scss
+++ b/src/views/PokemonList/pokemonlist.scss
@@ -3,6 +3,7 @@
 .pokemon-list-container {
     padding: 20px;
     background-color: #48D0B0;
+    min-height: 100vh;
     .navigation-container {
       display: flex;
       justify-content: space-between;
