my pokemon detail + document title change

--- a/src/components/MyPokemonCard/comp_mypokemoncard.scss
+++ b/src/components/MyPokemonCard/comp_mypokemoncard.scss
@@ -4,6 +4,7 @@
     position: relative;
     box-sizing: border-box;
     margin-bottom: 20px;
+    background-color: white;
     .text-container {
         margin: auto;
     }
